Correct figure and table numbering

--- a/Report.ipynb
+++ b/Report.ipynb
@@ -553,7 +553,7 @@
     "\n",
     "![Substrates bargraph](https://raw.githubusercontent.com/27410/group-assignment-2021-group-8-malonic-acid-in-k-phaffii/main/img/substrates_bargraph.png \"Substrates bargraph\")\n",
     "\n",
-    "*Figure 6: Comparison of the maximum malonic acid production with 50% growth rate for all feasible carbon sources in the model*\n"
+    "*Figure 6:* Comparison of the maximum malonic acid production with 50% growth rate for all feasible carbon sources in the model\n"
    ]
   },
   {
@@ -614,7 +614,7 @@
    "metadata": {},
    "source": [
     "![Escher plot](https://raw.githubusercontent.com/27410/group-assignment-2021-group-8-malonic-acid-in-k-phaffii/0c066bedec6c5fda0dbaf87301ad6637f749702a/img/saved_map.svg \"Escher plot\")\n",
-    "*Figure 7: Escher with added pathways*"
+    "*Figure 7:* Escher with added pathways"
    ]
   },
   {
@@ -660,7 +660,7 @@
     "\n",
     "![image.png](https://raw.githubusercontent.com/27410/group-assignment-2021-group-8-malonic-acid-in-k-phaffii/main/img/FSEOF.png)\n",
     " \n",
-    "*Figure 9: Reactions with > 0.01 change in flux with a forced objective flux towards malonic acid production ranging form 0.18 to 1.8.*"
+    "*Figure 9:* Reactions with > 0.01 change in flux with a forced objective flux towards malonic acid production ranging form 0.18 to 1.8."
    ]
   },
   {
